--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>Logging tools for fluentd</description>
 
-  <maintainer email="akio7141 at gmail.com">Akiyoshi Ochiai</maintainer>
+  <maintainer email="akio7141@gmail.com">Akiyoshi Ochiai</maintainer>
 
   <license>MIT</license>
 
