--- a/package.xml
+++ b/package.xml
@@ -4,9 +4,9 @@
   <version>0.0.0</version>
   <description>Logging tools for fluentd</description>
 
-  <maintainer email="akio7141@gmail.com">Akiyoshi Ochiai</maintainer>
+  <maintainer email="akio.code@gmail.com">Akiyoshi Ochiai</maintainer>
 
-  <license>MIT</license>
+  <Cicense>BSD 2-Clause</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
